# qa-flow

./: .env.envs.example  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  INSTALL.md  LICENSE  README-EN.md  README.md  REFACTOR_STATUS.md  biome.json  bunfig.toml  cleanup-duplicates.sh  config.example.json  config.json  latest-output.xmind  latest-prd-enhanced.md  package-lock.json  package.json  playwright.config.ts  playwright.selftest.config.ts  refactor-v3-P3-dataAssets-dry-v2.log.json  refactor-v3-P3-dataAssets-real.log.json  refactor-v3-P3-xyzh-dry.log.json  refactor-v3-P3-xyzh-real.log.json  refactor-v3-P3-xyzh-shadow-dry.log.json  refactor-v3-P3.5-reorg-dataAssets-real.log.json  refactor-v3-P3.5-reorg-xyzh-real.log.json  tsconfig.base.json  tsconfig.json
.claude/: config.json  full-project-review-prompt.md  settings.json  settings.local.json  ui-autotest-review-prompt.md
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
config/: repo-branch-mapping.example.yaml  repo-branch-mapping.yaml
tools/multiple-sql-cli/: README.md  package.json  pyproject.toml
tools/multiple-sql-cli/__tests__/: executor.test.ts
tools/multiple-sql-cli/__tests__/drivers/: hive.test.ts
tools/multiple-sql-cli/dtstack_pre/: _url.py  cli.py
tools/multiple-sql-cli/dtstack_pre/api/: assets.py  batch.py  metadata.py  session.py
tools/multiple-sql-cli/dtstack_preconditions.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/multiple-sql-cli/src/: cli.ts  executor.ts  index.ts
tools/multiple-sql-cli/src/config/: schema.ts
(+2009 files in other folders)
