[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dtstack-preconditions"
version = "0.1.0"
description = "DTStack 平台前置条件 CLI — 离线建表 / 数据资产引入 / 元数据同步"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.31",
]

[project.scripts]
dtstack-pre = "dtstack_pre.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["dtstack_pre*"]
